--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  padding: 30px;
+  background-color: gray;
+}
+
+.app {
+  width: 100%;
+  height: 100%;
+  min-height: calc(100vh - 60px);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+
+}
